--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag akshaykamath69/python-docker:latest
     - name: Push the Docker image
-      run: docker login -u akshaykamath69 -p ${{ secrets.DOCKER_TOKEN }} && docker push akshaykamath69/python-docker:latest
+      run: docker login -u akshaykamath69 -p ${{ secrets.DOCKER_SECRET }} && docker push akshaykamath69/python-docker:latest
